2018-08-03  DJ Delorie  <dj@redhat.com>

	* sysdeps/riscv/rvf/math_private.h (libc_feholdexcept_setround_riscv):
	Move libc_fesetround_riscv after libc_feholdexcept_riscv.

	* sysdeps/riscv/rv64/rvd/libm-test-ulps: Update.

2018-08-14  Florian Weimer  <fweimer@redhat.com>

	[BZ #23521]
	[BZ #23522]
	* nss/nss_files/files-alias.c (get_next_alias): During :include:
	processing, bail out if no room, and close the stream before
	returning ERANGE.
	* nss/Makefile (tests): Add tst-nss-files-alias-leak.
	(tst-nss-files-alias-leak): Link with libdl.
	(tst-nss-files-alias-leak.out): Depend on nss_files.

	* nss/tst-nss-files-alias-leak.c: New file.

2018-08-14  Florian Weimer  <fweimer@redhat.com>

	* nscd/nscd_conf.c (nscd_parse_file): Deallocate old storage for
	server_user, stat_user.

2018-08-13  Florian Weimer  <fweimer@redhat.com>

	* misc/error.c (error): Add missing va_end call.
	(error_at_line): Likewise.

2018-08-10  Florian Weimer  <fweimer@redhat.com>

	[BZ #23497]
	* sysdeps/unix/sysv/linux/getdents64.c (handle_overflow): New
	function.
	(__old_getdents64): Use getdents64.  Convert entries without
	moving them.
	* sysdeps/unix/sysv/linux/tst-readdir64-compat.c: New file.
	* sysdeps/unix/sysv/linux/Makefile (tests-internal): Add
	tst-readdir64-compat.

2018-08-08  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* htl/Versions (__pthread_getspecific, __pthread_setspecific): Add
	symbols.
	* sysdeps/htl/pthreadP.h [IS_IN (libpthread)] (__pthread_getspecific,
	__pthread_setspecific): Add hidden proto.
	* sysdeps/htl/pt-getspecific.c (__pthread_getspecific): Add hidden def.
	* sysdeps/htl/pt-setspecific.c (__pthread_setspecific): Add hidden def.

2018-08-01  Carlos O'Donel  <carlos@redhat.com>

	* version.h (RELEASE): Set to "stable".
	(VERSION): Set to "2.28".
	* include/features.h (__GLIBC_MINOR__): Set to 2.28.
	* NEWS: Add the list of bugs fixed in 2.28.

	* po/ca.po: Update to latest version.
	* po/cs.po: Likewise
	* po/da.po: Likewise
	* po/el.po: Likewise